# SKalsa_bot

./: .gitignore  Cargo.toml  README.md  SKalsa_bot.py  pyproject.toml  requirements.txt  test_hakis.py
.github/: dependabot.yaml
.github/workflows/: ruff_format.yaml  run_tests.yaml  rust.yml
src/: SKalsa_bot.py  lib.rs  main.rs  skalsa_bot.py
tests/: SKalsa_bot_test.py  skalsa_bot_test.py
